db conection, todo: context

--- a/WebMontecastelo/appsettings.json
+++ b/WebMontecastelo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ConexionMontecastelo": "Data Source=localhost;Initial Catalog=InstitutoMontecastelo;User ID=sa;Password=root;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
