Asignaturas, completed view.

--- a/WebMontecastelo/appsettings.json
+++ b/WebMontecastelo/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConexionMontecastelo": "Data Source=localhost;Initial Catalog=InstitutoMontecastelo;User ID=sa;Password=root;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "ConexionTarea3": "Data Source=localhost;Initial Catalog=InstitutoMontecastelo;User ID=sa;Password=root;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
